<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_margin="20dip"
        android:paddingStart="10dip"
        android:paddingEnd="10dip"
        android:orientation="vertical"
        android:background="@drawable/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_tv_close"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dip">


            <ImageView
                android:id="@+id/profile_iv_pic"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/a_usuario_perfil"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:layout_marginStart="15dip"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/profile_iv_pic">

                <TextView
                    android:text="Usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/profile_tv_name"
                    android:gravity="center"
                    android:background="@drawable/clear_card_background"
                    android:textColor="@color/blueButtonPrimary"
                    android:paddingStart="15dip"
                    android:paddingEnd="15dip"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="10dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_tv_height"
                        android:gravity="center"
                        android:layout_marginStart="5dip"
                        android:layout_marginEnd="5dip"
                        android:background="@drawable/clear_card_background"
                        android:textColor="@color/blueButtonPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_weight="33"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/profile_tv_weight"
                        android:gravity="center"
                        android:layout_marginStart="5dip"
                        android:layout_marginEnd="5dip"
                        android:background="@drawable/clear_card_background"
                        android:textColor="@color/blueButtonPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_weight="33"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/profile_tv_gender"
                        android:gravity="center"
                        android:layout_marginStart="5dip"
                        android:layout_marginEnd="5dip"
                        android:background="@drawable/clear_card_background"
                        android:textColor="@color/blueButtonPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_weight="33"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/profile_tb_illnesses"
                android:layout_marginEnd="5dip"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textOn="@string/profile_illnesses"
                android:textOff="@string/profile_illnesses"
                android:textColor="@drawable/dark_styled_button_text"
                android:background="@drawable/dark_styled_button_background"
                android:layout_width="0dip"
                android:layout_weight="50"
                android:minHeight="35dip"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/profile_tb_meds"
                android:checked="true"
                android:layout_marginStart="5dip"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textOn="@string/profile_meds"
                android:textOff="@string/profile_meds"
                android:textColor="@drawable/dark_styled_button_text"
                android:background="@drawable/dark_styled_button_background"
                android:layout_width="0dip"
                android:layout_weight="50"
                android:minHeight="35dip"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:padding="10dip"
            android:background="@drawable/clear_card_background"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/profile_ll_plot"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/profile_tb_back"
                        android:layout_marginStart="80dip"
                        android:layout_marginEnd="80dip"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textOn="@string/profile_back"
                        android:textOff="@string/profile_back"
                        android:textColor="@drawable/dark_styled_button_text"
                        android:background="@drawable/dark_styled_button_background"
                        android:layout_width="match_parent"
                        android:minHeight="30dip"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_ll_historic"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/profile_ll_illnesses"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/profile_name"
                                android:textColor="@color/blueButtonPrimary"
                                android:textStyle="bold"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"/>

                            <TextView
                                android:text="@string/profile_range"
                                android:textColor="@color/blueButtonPrimary"
                                android:textStyle="bold"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="40"/>

                            <View
                                android:layout_width="0dip"
                                android:layout_height="1dip"
                                android:layout_weight="10"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/profile_ll_meds"
                            android:visibility="gone"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/profile_name"
                                android:textColor="@color/blueButtonPrimary"
                                android:textStyle="bold"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="35"/>

                            <TextView
                                android:text="@string/profile_symptom"
                                android:textColor="@color/blueButtonPrimary"
                                android:textStyle="bold"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="30"/>

                            <TextView
                                android:text="@string/profile_dosage"
                                android:textColor="@color/blueButtonPrimary"
                                android:textStyle="bold"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_weight="25"/>

                        </LinearLayout>

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/profile_rv_list" />

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/profile_tv_close"
        android:paddingBottom="20dip"
        android:text="Cerra sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>